--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -22,7 +22,7 @@ wintypes: {
 }
 
 #Corners
-corner-radius = 5;
+corner-radius = 10;
 rounded-corners-exclude = [
   "class_g = 'dmenu'",
   "class_g = 'Polybar'"
@@ -33,6 +33,13 @@ fading = true;
 fade-delta = 5;
 fade-in-step = 0.056;
 fade-out-step = 0.06;
+
+# Blur
+#blur: {
+#	method = "dual_kawase";
+#	strength = 1;
+#};
+
 
 # Other
 vsync                  = true;
