--- a/.config/polybar/edsel-config.ini
+++ b/.config/polybar/edsel-config.ini
@@ -6,6 +6,7 @@ transparent = #00
 primary = #4bffdc
 alert = ${xrdb:color1}
 battery = #C678DD
+battery-background = #2a2e36
 
 [bar/ext]
 monitor = HDMI-A-0
@@ -50,9 +51,9 @@ font-0 = Jetbrains Mono:size=8;1
 font-1 = Jetbrains Mono:size=7;1
 font-2 = FontAwesome6Free:size=7:style=solid;1
 
-modules-left = bspwm network2
+modules-left = bspwm divider network2
 
-; wm-restack = bspwm
+#wm-restack = bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -72,7 +73,7 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding-left = 1
-padding-right = 1
+padding-right = 0
 
 module-margin-left = 1
 module-margin-right = 1
@@ -89,11 +90,24 @@ font-1 = FontAwesome6Free:size=8:style=solid;1
 font-2 = Ubuntu Nerd Font:size=8;1 
 font-3 = FontAwesome6Free:size=10:style=solid;1
 font-4 = Ubuntu Nerd Font:size=11;2
+font-5 = Jetbrains Mono:size=7;1
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[module/divider]
+type = custom/text
+content = |
 
+[module/round-left]
+type = custom/text
+content = %{T3}%{T-}
+content-foreground = #2a2e36
+
+[module/round-right]
+type = custom/text
+content = %{T3}%{T-}
+content-foreground = #2a2e36
 
 [module/bspwm]
 type = internal/bspwm
@@ -146,7 +160,7 @@ interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-foreground = #5DABEB
-label-connected = %{A1:/home/edsel/Documents/Programs/internet-speed/showspeed.sh:}%essid:0:10%%{A}
+label-connected = %{A1:/home/edsel/Documents/Programs/internet-speed/showspeed:}%essid:0:10%%{A}
 
 
 
@@ -177,6 +191,7 @@ label = %percentage:1%%
 type = internal/battery
 battery = BAT0
 adapter = ADP0
+;poll-interval = 5
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
@@ -186,14 +201,17 @@ ramp-capacity-3 = 
 label-full = "%percentage%%"
 format-full = "%{T4} %{T-}<label-full>"
 format-full-foreground = ${colors.battery}
+format-full-background = ${colros.battery-background}
 
 label-charging = "%percentage%%"
 format-charging = " <label-charging>"
 format-charging-foreground = ${colors.battery}
+format-charging-background = ${colros.battery-background}
 
 label-discharging = "%percentage%%"
-format-discharging = %{T4}<ramp-capacity>%{T-} <label-discharging>
+format-discharging = %{A1:/home/edsel/script/show_battery/show_battery.exe:}%{T4}<ramp-capacity>%{T-} <label-discharging>%{A}
 format-discharging-foreground = ${colors.battery}
+format-discharging-background = ${colors.battery-background}
 
 [module/pulseaudio]
 type = internal/pulseaudio
