--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,6 +1,9 @@
 [colors]
-background = #0A1419
-foreground = #fff
+#background = #0A1419
+#background = #161616
+background = #0F0F17
+#foreground = #fff
+foreground = #BFC9DB
 transparent = #00000000
 
 [bar/tray]
@@ -34,10 +37,10 @@ width = 12%
 height = 25
 offset-x = 87%
 offset-y = 0.0
-radius = 8.0
+radius = 11.0
 line-size = 1
 
-border-top-size = 5
+border-top-size = 6
 padding-left = 1
 padding-right = 1
 
@@ -56,10 +59,10 @@ width = 12%
 height = 25
 offset-x = 1%
 offset-y = 0.0
-radius = 8.0
+radius = 11.0
 line-size = 1
 
-border-top-size = 5
+border-top-size = 6
 padding-left = 1
 padding-right = 1
 
@@ -79,11 +82,11 @@ width = 70%
 height = 25
 offset-x = 15%
 offset-y = 0
-radius = 8.0
+radius = 11.0
 line-size = 1
 
-border-top-size = 5
-border-bottom-size = 1
+border-top-size = 6
+border-bottom-size = 2
 padding-left = 1
 padding-right = 2
 
@@ -118,12 +121,12 @@ margin-top = 0
 type = internal/bspwm
 
 label-focused = %{T2}%{T-}
-label-focused-foreground = #FFF
+label-focused-foreground = ${colors.foreground}
 label-focused-padding = 1
 
 label-occupied = %{T3}%{T-}
 label-occupied-padding = 1
-label-occupied-foreground = #FFF
+label-occupied-foreground = ${colors.foreground}
 label-occupied-background = ${colors.background}
 
 label-empty = %{T3}%{T-}
