--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -24,8 +24,10 @@ wintypes: {
 #Corners
 corner-radius = 10;
 rounded-corners-exclude = [
+  "class_g = 'TelegramDesktop'",
   "class_g = 'dmenu'",
-  "class_g = 'Polybar'"
+  "class_g = 'Polybar'",
+  "class_g = 'Deadd-notification-center'"
 ];
 
 # Fading
@@ -36,9 +38,23 @@ fade-out-step = 0.06;
 
 # Blur
 #blur: {
-#	method = "dual_kawase";
-#	strength = 1;
+#	method = "gaussian";
+#	strength = 100;
 #};
+
+blur: {
+  # requires: https://github.com/ibhagwan/picom
+  method = "dual_kawase";
+  #method = "kernel";
+  strength = 5;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
+
 
 
 # Other
